--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <div class="subbox2">
                             <p2><b><em>CONFIG</em></b></p2>
                             <br>
-                            <a href="/cfg.cfg" download><img src="txt.png" width="35px" class="img"></a>
+                            <a href="https://drive.google.com/file/d/1KnsNk8NIrJux0u9vKKVUsmkLtBr0oFAy/view?usp=share_link" target="_blank" download><img src="txt.png" width="35px" class="img"></a>
                             <!--ATUALIZAR CFG, ARQUIVO EM BRANCO-->
                         </div>
                     </div>
