--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <form>
             <fieldset>
                 <legend><b>CS:GO</b></legend>
-                <br>
                     <div class="subbox-1">
                         <p><b><em>CONTEÚDO EXTERNO</em></b></p>
                         <div class="subbox1">
@@ -55,11 +54,13 @@
                         <br><br>
                         <p4>Proporção de Tela - 4:3</p4>
                     </div>
+                    <p id="data-hora"></p>
             </fieldset>
         </form>
     </div>
     <footer>
         <p class="footerp">Website criado e desenvolvido por Pedro Henrique da Silva Gomes.</p>
     </footer>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
